0032037: Visualization - move V3d_View::FitMinMax() to Graphic3d_Camera::FitMinMax()